--- a/history
+++ b/history
@@ -1,3 +1,296 @@
+ls|rev
+ls
+env
+ls
+clear
+env|rev
+emv| rev
+env
+ls
+clear
+ls
+clear
+ls;ls
+clear
+ls
+ls >&- | rev
+ls >&-
+ls
+ls -l auteur >&- | rev
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls -l auteur wegqferf  1>&- 2>&1 
+ls
+clear
+ls -l auteur wegqferf  1>&- 2>&1 
+cat history
+cat file
+ls -l auteur wegqferf  1> file  2>&1 
+ls -l auteur wegqferf  1>&- 2>&1 
+ls -l auteur wegqferf  1>&- 2>&1 
+ls
+ls
+ls|rev
+clear
+    
+
+
+
+
+
+
+
+
+
+ls
+
+
+
+
+w
+
+
+
+f
+ls
+env
+ls -l auteur wegqferf  1>&- 2>&1 
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+\"\" "     "
+rev
+ls |
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls | rev
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls
+clear
+ls
+ls
+clear
+rev
+ls | 
+ls
+clear
+ls
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls | rev
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls|rev
+ls
+clear
+ls
+ls
+clear
+cat file
+cat fie
+ls
+rev
+ls |
+v
+ls|
+ls
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls -l auteur wegqferf  1>&- 2>&1
+ls -l auteur wegqferf  1>&- 
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ld
+cat file
+ls -z 2>&- 1> file
+ls -z 2>&-
+ls 2>&-
+cat file
+ls > file
+ls
+cat file
+ls > file
+rev
+ls|
+ls
+clear
+ls
+cd
+ls
+cd
+cd
+cd
+cd
+ls;ls
+ls
+ls
+ls|rev
+ls
+clear
+ls
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+v
+ls|
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+clear
+ls | rev| cat -e
+ls | rev
+clear
+ls
+rev
+rev
+ls |
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls -l auteur wegqferf  1>&- 2>&1 | rev
+ls -l auteur wegqferf  1>&- 2>&1
+ls -l auteur wegqferf 2> file 1>&-
+cat file
+ls -l auteur wegqferf 2> file
+ls -l auteur wegqferf
+rev
+ls |
+ls
+ls 2> file
+ls
+clear
+ls
+ls -z 2>&1 1> file
+ls -z 2>&1 | rev
+ls | rev
+clear
+ls -l auteur eqrgteqrgt 2>&1 |cat -e
+ls -l auteur eqrgteqrgt 2>&1 |cat -e
+ls -l auteur eqrgteqrgt 2>&1 |cat -e
+ls -l auteur eqrgteqrgt 2>&1 |cat -e
+ls -l auteur eqrgteqrgt 2>&1 |cat -e
+ls -l auteur eqrgteqrgt 2>&1 |cat -e
+ls -l auteur eqrgteqrgt 2>&1 |cat -e
+ls -l auteur eqrgteqrgt 2>&1 |rev
+ls -l auteur eqrgteqrgt 2>&1
+ls -l auteur eqrgteqrgt
+ls -l auteur
+ls -l
+ls
+ls
+
+
+
+
+
+
+ls -l auteur eqfqrfqre 1>&- 2>&1
+ls | rev
+clear
+ls -z 2>&1 | rev
+ls -z 2>&1 | rev
+ls -z 2>&1 | rev
+ls -z 2>&1 | rev
+ls -z 2>&1 | rev
+ls -z 2>&1 | rev
+ls
+rm -rf file
+cat file
+ls -l auteur ewqfwe 1> file 2>&1 
+ls -l auteur ewqfwe 1> file 2>&1 
+ls -l auteur ewqfwe 1> file 2>&1 | rev
+ls -l auteur ewqfwe 1>&- 2>&1 | rev
+ls -l auteur ewqfwe 1>&- 2>&1 | rev
+ls -l auteur ewqfwe 1>&- 2>&1 | rev
+ls -z 2>&1 | cat -e
+ls -z 2>&1 | cat -e
+ls -z 2>&1 | cat -e
+ls -z 2>&1 | cat -e
+ls -z 2>&1 | rev| cat -e
+ls -z 2>&1 | rev
+ls
+clear
+ls
+ls -z 2>&1 | rev
+
+ls -z 2>&1 | rev
+ls -l auteur ewqfwe 1>&- 2>&1 | rev
+cat file
+ls > file
+ls -l auteur ewqfwe 1>&- 2>&1 | rev
+ls -l auteur ewqfwe 1>&- 2>&1 | rev
+ls -l auteur ewqfwe 1>&- 2>&1 | rev
+ls -l auteur ewqfwe 1>&- 2>&1 | rev
+rev
+ls|
+ls
+
+ks
+ls -l auteur ewqfwe 1>&- 2>&1 | rev
+ls -l auteur ewqfwe 1>&- 2>&1 | rev
+ls -l auteur ewqfwe 1>&- 2>&1 | rev
+ls -l auteur ewqfwe 1>&- 2>&1 | rev
+ls -l auteur ewqfwe 1>&- 2>&1 | rev
+ls -l auteur ewqfwe 1>&- 2>&1 | rev
+ls -l auteur ewqfwe 1>&- 2>&1
+clear
+rev < file | rev
+rev
+ls|
+ls | rev
+ls | rev
+ls
+clear
+rev
+ls|
+ls
+ld
+ls | rev
+ls
+clear
+rev
+ls|
+ls | rev
+ls
+clear
+
+
+
+
+
+             
+  
+   
+
+
+
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ls
+clear
+ls
 cat < toto
 ls
 clear
