--- a/history
+++ b/history
@@ -1,3 +1,551 @@
+sudo make save
+make save
+cd libft
+cd lib
+ls
+rm -rf file fime
+ls
+clear
+echo "\a"
+
+clear
+clea
+ls
+|| ls
+raz
+ls ||
+ls || env
+ls && clear
+clear
+ls|rev |cat -e
+clear
+ls ; ls
+ls
+ls|rev
+ls
+r
+\
+\zer
+er
+\
+\er
+e
+\
+||
+&& ls
+e
+\
+\e
+\elzerz
+e
+\
+\e
+\c
+\\
+e
+\
+
+\
+
+\
+e
+\
+ls
+&&
+ls
+&&
+&& 
+&
+ls
+clear
+echo "\a"
+e
+echo \
+e
+e
+echo \
+e
+e
+echo \
+echo \e
+e
+e
+echo \
+e
+echo \
+ls
+
+\
+e
+\
+ls
+
+\
+e
+\
+
+\
+
+e
+e
+echo \
+
+lol
+
+ls ||
+
+\
+\e
+ezr
+lol
+\
+l
+\
+ezae ; ls
+\
+ls
+echo "lol"
+ls
+clear
+\e
+\e
+echo '\a' | rev
+"
+echo "\a' | rev
+clear
+ls
+echo "lol"
+ls -la
+ls
+clear
+ls
+> file
+>
+echo "\a"
+rev
+ls|
+ls
+echo "\a" '\a'
+echo "l"
+echo '\a'
+echo "lol \a ";ls
+echo "\a";ls
+echo "\a";ls
+echo "\a";ls
+echo "\a";ls
+echo "\a"
+echo "\a"
+echo "\a"
+echo "\a"
+echo "\a"
+zra
+echo "lol" ; ls
+echo "lol" ; ls
+echo "lol" ; ls
+echo "lol" ; ls
+echo '\a'
+echo "\a"
+echo "lol" ; ls
+echo "lol" ; ls
+echo "lol" ; ls
+echo "lol" ; ls
+echo "\a" '\a'
+echo "lol"
+clear
+ls
+echo \n
+echo "lol"
+ls| rev
+ls
+clear
+l"
+echo "lo
+echo "\a"
+echo "lol"
+echo "lol"
+echo "lol"
+echo "lol"
+echo "lol"
+echo "lol"
+echo "lol"
+echo "lol"
+echo "lol"
+echo "lol"
+echo "lol"
+lol"
+echo "lol
+echo "lol
+clear
+echo '\a'
+echo '\n'
+clear
+echo "\a"
+echo "\n"
+echo "\a"
+echo 'lol'
+echo "lol"
+echo "lol"
+echo "lol
+clear
+echo "lol"
+echo "lol"
+echo "lol"
+echo "\a"
+echo "\a"
+echo "\a"
+ls |rev
+clear
+ls
+echo 'lo'
+echo 'lo'
+echo "lol"
+echo "\""
+echo \|
+echo 'lol'
+echo 'lol'
+echo "lol"
+ls|rev|cat -e > file
+ls
+echo "lol"
+echo "lol"
+echo 'lol'
+echo "lol"
+ls
+clear
+ls
+ld
+echo 'lol'
+echo "a"
+echo "\a"
+echo "\a" '\a'
+ls
+mdr
+lol
+echo "lol"
+ls
+echo "lol"
+ls
+ls|rev|cat -e
+ls|rev
+clear
+ls
+ls
+echo "lol"
+clear
+ls
+echo "lol \a"
+clear
+ls
+echo '\a'
+echo "lol \a" '\a'
+echo "lol"
+echo "lol
+clear
+ls
+echo "lol"
+echo '\a'
+ls
+clear
+echo lol '\a'
+echo "lol \a"
+ls| rev
+clear
+ls
+echo '\a'
+echo "lol \a " '\a\'
+ls
+clear
+ls |rev || env
+ls
+clear
+ls
+exit
+
+ls
+ &&
+ls
+rev
+ls |
+ls
+ls | rev
+ls|rev
+ls |rev
+ls
+clear
+ls
+ls > file 
+ls > file
+
+clear
+ls
+sudo rm -rf file
+ls
+ls > file
+ls | rev < file
+ls | rev
+ls | rev [
+clear
+ls >&2
+ls >&1
+clear
+lsazr
+
+
+
+clear
+er
+ls ezarz
+zaer
+zear
+rev
+ls |
+clear
+"\n \n \a"
+clear
+echo "\n \n\n"
+clear
+ls
+clear
+echo "\a"
+echo "lol"
+echo "lol" ;ls
+echo "lol" ;ls
+echo "lol" ;ls
+echo "lol"
+echo 'lol' ; ls
+echo "\n " ; ls
+echo "\n "
+echo "lol\n\n" | cat -e
+echo "lol\n\n" | cat -e
+echo "lol\n\n" | cat -e
+echo "lol\n\n" | cat -e
+ls "\alol"
+ls "\alol"
+clear
+clar
+echo "lol \n\a"
+ls
+echo "lol \n\a"
+echo "lol \" \n\n"
+echo "lol \n"
+echo "lol\"  "
+echo "lol\"  "
+echo 'lol\'
+echo 'lol' 
+echo "lol"
+clear
+rev
+ls |
+ls
+echo 'lol'
+echo "lol"
+ls
+echo 'lol'
+echo "lol"
+rev
+ls|
+ls| rev
+clear
+ls
+clear
+echo 'lol'
+echo 'lol'
+echo 'lol'
+echo 'lol'
+rev
+ls |
+ls
+echo 'lol'
+echo 'lol'
+ls "ezr
+ls| rev
+clear
+ls
+ls &&
+rev
+ls |
+ls - rev
+ls
+ls|
+clear
+rev
+ls |
+ls
+ls
+ls|
+clear
+ls
+ls|rev
+clear
+ls
+clear
+cleear
+ls
+cd
+env
+ls
+cd
+env|grep HOME
+env
+env|grep PWD
+ls
+clear
+rev < file
+ls|rev
+ls
+lq
+clear
+ls -z 2>&1 | rev
+ls -z 2>&1
+clear
+ls
+ls -z 2>&1 
+cat file
+ls > file
+ls
+echo "lol"
+ls 
+clear
+ls
+ls&&ls||
+ls|rev
+ls
+ls|rev
+ls | rev
+ls -l
+ls _l
+ls
+ls|rev
+ls |rev
+ls
+ls
+rev
+ls|
+ls|rev
+ls
+ls
+env
+ls
+clear
+ls
+touch srcs/lexer.c
+env
+clear
+ls
+exit
+clear
+ls
+clear
+cler
+ls
+exit
+ls
+clear
+exit
+clear
+ls
+setenv PATH /bin
+ls
+clear
+ls
+ks
+unsetenv PATH
+clear
+env | grep PATH | grep bin
+/bin/ls
+ls
+env | grep PATH
+clear
+cler
+cleqr
+pwd
+env
+ls
+clear
+ls
+rm -rf file
+cat file
+ls -z 2> file
+ls -z 2>&1 | rev
+exit
+ls -z 2>&1 | rev
+ls -z 2>&1 | rev
+exit
+ls -z 2>&1 | rev
+clear
+clear
+ls || env | rev || env|grep PWD|rev
+ls || env | rev 
+rze
+clear
+exit
+clear
+eenv$
+ls || 
+clear
+ls
+ls &&
+ls && ls
+clear
+rev
+ls|
+"
+f
+zle
+" eee \n \"    
+" eee \n \"    "
+clear
+ls
+rm -rf ";" file
+ls
+clear
+cat file
+clear
+env | grep "PWD" > file
+env | grep "PWD" 
+env | grep "PWD" | rev
+env
+ls
+clear
+
+
+lra
+ear
+erar
+ls
+ls
+ls
+clear
+env
+clear
+exit
+clear
+ls
+ls || env || env || env | rev 
+ls || env || ls || env
+ls || env ; ls
+ls || env ; ls
+ls || env : ls
+ls || env ; ls
+env
+ls ||
+ls || env
+ls || ls
+ls | ls
+env ; ls
+ls ||
+rev
+ls |
+clear
+ls
+ls -l auteur 1> file 2>&1
+cat file
+ls > file
+clear
+ls -l
+ls
+clear
+ls
 ls|rev
 ls
 env
