--- a/history
+++ b/history
@@ -1,3 +1,1046 @@
+exit
+ls|rev|cat -e | rev&& ls
+ls|rev|cat -e | rev
+clear
+ls |rev | cat -e||ls
+ls |rev | cat -e&&ls
+clear
+ls |rev | cat -e; ls
+ls |rev | cat -e
+ls| cat| rev
+ls|rev|cat -e
+ls|rev|cat -e
+ls|rev|cat -e;ls
+ls|rev|cat -e
+ls|rev
+ls|rev | cat -e ; ls
+ls|rev| cat -e ; ls
+ls| rev && ls
+ls|rev|cat -e ; ls
+ls|rev|cat -e ; ls
+ls|rev|cat -e || ls
+ls|rev|cat -e && ls
+ls|rev;ls
+ls|rev
+ls|rev ; ls
+ls|rev ; ls
+ls|rev ; ls
+ls|rev ; ls
+ls|rev ; ls
+ls|rev
+
+ls|rev
+ls|rev|cat -e;ls
+ls|rev|cat -e
+ls|rev|cat-e
+ls && ls && ls && env|grep PWD
+ls|rev|cat -e && ls
+ls|rev 
+echo lol ; ls
+ls|rev; echo lol
+ls|rev; echo lol
+echo lol
+ls|rev; echo lol
+clear
+ls|rev
+clear
+echo lol
+ls
+env
+njzfka 2>&-
+ls|rev
+clear
+exit
+exity
+clear
+rm -rf fgile
+ls
+clear
+rm -rf file
+cat fgile
+env > fgile
+cat file
+echo lol > file
+clear
+echo lol > file
+echo lol > file
+ls|rev
+ls
+echo lol > file
+lol
+
+echo lol > file 
+echo lol > file
+ls
+clear
+echo lol > file
+echo lol > file
+echo lol > file
+ls
+echo lol > file
+clear
+echo lol > file
+echo lol > file
+echo lol > file
+clear
+rev
+ls|
+clear
+echo lol > file
+rev
+ls|
+echo lol > file
+echo lol > file
+echo lol > file
+echo lol > file
+echo lol  > file
+echo lol  > file
+echo lol > file ; cat file
+echo lol > file
+ls
+echo lol > file
+echo lol
+echo lol > file
+echo lol > file
+echo lol > file
+echo lol > file
+echo lol  > file
+echo $PATH
+clear
+ls
+clear
+echo "\n"
+clear
+echo "\a"
+
+env > file
+env
+cat file
+ls |rev|cat -e > file ;cat file
+
+cat file
+ls|rev|cat -e >file
+ls
+$ls
+echo  lol > file
+echo lol
+ls| rev
+clear
+clezar
+ls
+cd ~
+~
+clear
+echo $HOME
+env
+ls|rev
+clear
+ls
+rm -rf fi file 
+ls
+clear
+env | grep PWD
+env
+pwd
+exit
+exit
+echo lol
+ls
+exit
+exit
+cd
+echo lol
+ls
+clear
+env | grep PWD
+env
+ls
+clear
+pwd
+ls
+cd ..
+clear
+pwd
+pwf
+cd
+
+env
+setenv l m
+clear
+ls
+env
+unsetenv HOME
+env
+setenv lol mdr
+cat file
+echo lol > file
+ls
+setenv zeafgez zefaz
+clear
+env
+setenv LOL MDR
+clear
+cat fi
+echo lol > fi
+echo lol
+ls|rev
+clear
+setenv LOL POL
+ls
+setenv MDR LOL
+echo lol$
+DR
+ls
+clear
+cat file
+echo LOL >> file
+echo lol > file ; cat file
+clear
+cat file
+ls > file
+ls 
+clear
+clear
+cat file file
+echo LOL >> file
+ls
+clear
+cat file
+echo lol > file
+ls
+
+
+
+echo LOL > file
+ls
+cat fi
+echo lol > fi
+ls
+clear
+ls
+cat f
+echo lol> f
+ls
+cat filez
+echo lol> filez
+echo lol
+ls
+echo lol > file
+clear
+cat file
+echo lol > file
+cat file
+echo lol > file
+ls
+clear
+cd
+ls
+clear
+cat file
+echo lol > file
+echo lol
+clear
+cat < zafegaz || env
+ls
+clear
+cat < fzerf
+clear
+ls
+ls
+clear
+ls|rev|cat -e; echo lol
+ls|rev
+ls|rev;echo lol
+ls|rev>file;cat < file
+clear
+ls |rev
+clear
+cat < file
+ls
+cat < erat
+ls
+cat < zef
+cat < file
+ls > file
+ls
+ls
+clear
+ls
+cat < zetr
+cat < file
+ls
+cat < aert
+ls
+clear
+cat < zaef
+ls
+cat < zaefg
+cat < zaegf
+cat < zaegf
+ls > file
+clear
+ls
+cat < zgfa
+ls> file
+ls|rev
+cat < fzef
+cat < file
+ls > file
+ls
+cat < zaef
+cat < file
+ls>file
+ls|rev
+clear
+ls
+cat < fevb
+
+cat < file
+cat file
+ls > file
+ls|rev
+ls
+cat < zeragf
+cat < zeragf
+cat < file
+ls > file
+cat < fefrg
+cat < file
+cat file
+ls > file
+clear
+cat < makefile
+ls
+ls
+clear
+zeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
+ls
+clear
+env
+clear
+env
+clear
+ls | rev
+ls
+clear
+eoi
+mdr
+cat << eoi
+clear
+eoi
+lsl
+cat << eoi
+ls
+eoi
+mdr
+rev << eoi
+clear
+cat < Makefile
+cat << file
+cllear
+cat file
+catt file
+cleazzr
+ls
+ls > file | rev
+ls > file | rev
+clear
+cler
+ls -l auteur aezrgfer 2>&1 1>&-
+ls -l auteur aezrgfer 2>&1 1>&-
+ls -l auteur aezrgfer 2>&1 | rev
+clear
+ls -l auteur aezrgfer 2>&1 | rev
+ls -l auteur zdafz 2>&1
+ls -l auteur 
+clear
+ls > file
+ls -l auteur zaefez 1>&2 2>&1 1>&-
+ls -l auteur zaefez 1>&2 2>&1 1>&-
+ls -l auteur zaefez 1>&2 2>&1 1>&-
+ls -l auteur zaefez 1>&2 2>&1 1>&-
+ls -l auteur zaefez 1>&2 2>&1 | rev
+ls -l auteur zaefez 1>&2 | rev
+ls -l auteur zaefez 1>&2 
+ls
+ls|rev > file
+clear
+ls
+ls -l auteur 1>&2 2>&1 | rev
+ls -l auteur 1>&- 2>&1 | rev
+ls -l auteur azefazef 2>&1 | rev
+ls
+clear
+
+exit
+sudo make fre
+make fre
+clear
+cler
+
+
+
+t file
+s -z 2>&1 | rev > file ; cat file
+file
+ls -l auteur zaerzer > file 2>&1
+
+cat file
+cat file
+ls -l auteur zaerzer > file 2>&1
+ls
+
+rm -rf file
+cat file
+ls -l auteur zaerzer > file 2>&1
+
+ls|rev
+ls
+clear
+ls -l auteur zaerzer > file 2>&1
+cat file
+ls > file | rev
+ls 1>&|rev|cat -e
+ls 1>&2|rev|cat -e
+ls 1>& 2|rev|cat -e
+ls|rev|cat -e
+ls|rev
+ls -l auteur zaerzereza 2>&1 1>&- | rev
+
+cl
+ls
+ls -l auteur zaerzereza 2>&1 1>&- | rev
+exit
+ls -l auteur zaeraze 1>&2 2>&1 | cat -e
+ls -l auteur zaeraze 1>&2 2>&1 | cat
+ls 1>&2|rev
+ls 1>&2
+ls
+l
+clear
+ls -l auteur zaeraze 1>&2 2>&1 | cat
+ls -l auteur zaeraze 1>&2 2>&1
+ls -l auteur ezzaerze  1>&2 2>&1 | rev
+ls -l auteur ezzaerze 2>&1 1>&2 | rev
+ls -l auteur ezzaerze 2>&1 | rev
+ls -l auteur ezzaerze 2>&1
+clear
+ls -l auteur ezzaerze 
+ls|rev
+
+ls
+ls
+ls
+clear
+ls
+clear
+exit
+clear
+ls|rev
+clear
+ls
+ls|rev
+clear
+
+clea
+ls|rev|cat -e
+ls|rev
+ls
+cat file
+l 2>file
+l>file
+ls 
+ls 1>&2 
+>&2 
+ls 1>&2 | cat -e
+ls 1>&2 | cat
+clear
+ls 1>&2
+ls|rev
+ls|rev
+clear
+ls -l auteur aerzafz  2>&1 1>&- | rev
+ls -l auteur aerzafz  2>&1 1>&-
+clear
+ls > file ; cat < file
+eoi
+lol
+cat -e << eoi
+cat -e <<
+cat -e <<
+clear
+ls>file; cat < file
+ls
+ls -z 1>&- 2>&1 | rev
+ls -z 1>&- 2>&1
+ls 1>&- 2>&1
+clear
+cat file  zf 2>&1 | rev
+cat file
+ls -l auteur zearar > file 2>&-
+cat file
+ls > file
+ls
+ls
+exit
+ls
+ls | rev
+ls -l auteur arezra 1>&-  2>&1 | rev
+ls -l auteur arezra 1>&-  2>&1 | rev
+ls > file
+ls > file
+ls -l auteur arezra 1>&-  2>&1 | rev
+ls
+ls|rev|cat -e
+ls|rev
+ls
+clear
+ls
+ls -l auteur arezra 1>&-  2>&1 | rev
+cat file
+ls > file
+ls > file
+ls
+ls -l auteur arezra 1>&-  2>&1 | rev
+ls -l auteur arezra 1>&-  2>&1 | rev
+ls -l auteur arezra  2>&1 | rev
+ls  1>&1 | rev
+ls -z 2>&2 | rev
+ls -z 2>&1 | rev
+ls 1>&2 | rev
+ls 1>&2 | rev
+ls|rev
+ls 1>&- | rev
+ls 1>&-
+
+ls 1>&-| | rev
+ls 1>&-| rev
+ls 1>&-
+ls -l auteur zarzar 1>&-  2>&1 | cat
+ls -l auteur zarzar 1>&-  2>&1 | rev
+ls -l auteur zarzar 2>&1 | rev
+ls -l auteur zarzar 2>&1
+clear
+ls
+ls|rev|cat -e
+cat file
+ls > file
+ls > file
+ls
+ls -l auteur zearze 2>&1 | rev
+ls -l auteur zearze 1>&- 2>&1 | rev
+ls -l auteur zearze 1>&- 2>&1 | rev
+ls > file
+ls
+ls -l auteur arr 1>&2 2>&1 | rev
+ls -l auteur arr 1>&2 2>&1 | rev
+
+ls -l auteur arr 1>&2 2>&1
+ls 1>&2 2>&1
+ls
+ls -l auteur zaerar 1>&2 2>&1
+clear
+ls
+pwd
+pwd
+ls -z 2>&1|rev
+ls -z 2>&1
+ls -l azera 2>&1 | rev
+ls -l azera 2>&1 | rev
+ls -l azera 2>&1 | rev
+ls -l azera 2>&1
+ls > file
+ls -l auteur aeraeaz 2>&1 | rev
+cat file
+ls >file
+ls>file
+car
+ls
+ls>file
+ls>file
+cat < file
+cat file
+ls>file ; cat <file
+ls>file
+ls
+ls -l auteur zaerzer 2>&1| rev
+ls -l auteur zaerzer 2>&1| rev
+ls -l auteur zaerzer 2>&1| rev
+ls -l auteur zaerzer 2>&1
+pwd
+ls
+ls -z 2>&1 | rev
+ls -z 2>&1 | rev
+ls -z 2>&1 
+ls
+ls -z 2>&1 1>&- | rev
+ls -z 2>&1 | rev
+ls -z 2>&1
+ls -l auteur zarzar 2>&1 1>&- | rev
+ls -l auteur zarzar
+ls
+ls azerzr 2>&1 | rev > file ; cat file
+ls|rev ;ls
+cat file
+cat file
+ls azerzr 2>&1 | rev > file ; cat file
+ls azerzr 2>&1 | rev
+ls azerzr 2>&1 | rev
+ls azerzr 2>&1 | rev
+ls 2>&1 | rev
+ls | rev
+ls 2>&1|rev
+ls 2>&1
+cat < file
+cat file
+ls >file
+ls 2>&1 | rev
+ls 2>&1
+ls 2>&1
+ls 2>&1|rev
+ls 2>&1
+ls 2>&1
+ls arz 2>&1 | rev
+ls arz 2>&1
+clear
+env|grep PWD
+env
+clear
+l
+c
+ls
+ls arz 2>&1 |rev
+cat file
+ls|rev>file;catfile
+cat file
+ls|rev >file
+ls
+rev < file
+ls > file
+cat file
+ls zare 2>file
+ls
+clear
+ls
+cat file
+ls>file
+ls
+cat file
+ls arza 2>&1 1>file ; cat file
+ls arza 2>&1 | rev
+ls arza 2>&1 
+clear
+ls
+ls aerra 2>&1 | rev
+ls 2>file 1>&2
+ls>file
+clear
+l|rev
+l|rev
+clear
+ls
+cat < file
+ls > file
+ls
+cat file
+ls>file
+ls|rev
+ls
+cat file
+ls | rev > file && ls>>file
+cat file
+ls>file && ls>>file
+cat file
+ls|rev>file;azrzr;zarzr && era
+ls |rev>file;catfile
+ls ; lzaere
+zaer
+cat file
+ls file
+
+ls
+ls|rev>file;catfile
+ls
+sudo make
+make
+ls
+exit
+21sh
+exit
+./21sh
+clear
+ls
+ls
+clear
+cleqr
+env|grep|cat -e
+env
+ls|rev
+clear
+ls
+clear
+\~\~
+echo \~
+echo ~~
+echo ~
+echo ~~
+cat file
+ls
+ls
+clear
+ls
+ls|rev
+ls
+clear
+ls
+env
+clear
+ls
+echo ~~
+echo "~~~~"
+echo "~"
+clear
+ls
+exit
+echo "$PWD\a~$HOME"
+echo "$PWD\a"
+ls|rev
+clear
+ls
+echo "$PATH\a~" '$LOL'
+exit
+echo \$VAR
+ls
+clear
+echo \~
+
+clear
+ls ~/21sh
+echo ~/21sh
+echo ~1sh
+clear
+ls
+clear
+echo ~$PATH
+echo ~
+echo ~
+echo ~
+
+ls
+echo ~
+echo ~
+echo ~
+echo ~
+echo ~
+echo ~
+echo "~"
+echo "~"
+echo "~"
+echo "~"
+clear
+echo '$PWD'
+echo '$LOL'
+echo '$'
+echo 'lol'
+echo '\n'
+echo $ZE
+echo "Â$ZAD"
+D"
+echo ~
+echo ~
+echo ~
+echo ~
+env
+echo ~
+echo ~
+clear
+ls
+echo ~
+echo ~$PWD$HOME
+echo $PWD$HOME
+echo "\a"
+clear
+ls -l
+ls
+clear
+ls
+echo
+echo 
+echo 
+echo 
+clear
+echo ##
+echo 
+echo 
+clear
+echo "$PWD"
+ls
+ls|rev|cat -e
+clear
+echo $HOME$PWD
+echo $HOME$PWD
+echo $PWD
+echo '\a' "$PATH"
+clear
+ls
+echo lol ; cat < f
+cle<r
+"
+\a
+echo "
+"
+\
+echo "^
+clear
+e
+\
+echo "$PATH"
+echo '$PATH'
+ls
+clear
+echo "$PWD$PATH"
+echo "$PWD"
+echo "$PWD"
+echo "$PWD"
+echo "$PWD"
+echo "$PWD"
+echo "$PWD"
+echo "$PWD"
+echo "$PWD"
+echo "$PWD$PATH"
+echo "$PWD$PATH"
+echo "$PWD$PATH"
+echo "$PWD"
+env
+clear
+ls
+ks
+echo "$PWD$PATH"
+echo "$PWD$PATH"
+echo "$PWD$PATH"
+echo "$PWD"
+"
+echo "$PWD"
+echo "  $PWD  "
+echo "  $PWD  "
+env
+echo "  $PWD  "
+echo "  $PWD  "
+echo "   $PATH  "
+"
+ ˆ3Åÿ
+"
+echo "$PWD"
+echo "lol"
+ls
+echo "$PWD"
+env
+ls
+echo "$PWD"
+ls
+./21
+echo "$PWD"
+echo "$PWD"
+echo "PWD"
+Echo "PWD"
+echo "$PATH"
+echo "PWD"
+echo "$PATH"
+env
+env
+clear
+ls
+cd
+echo "$LANG"
+echo "$PATH"
+echo "$PATH"
+echo "$PATH"
+echo "$PATH"
+
+ls
+echo "$PATH"
+env
+
+ls
+ls
+ls
+env
+ls
+ls
+
+ls
+ls
+ls
+mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm
+mmmmmmmmmmmmmmmmmmmmmmmmmmmm
+clear
+ls
+echo "$PATH"
+
+ls
+echo "$PATH"
+echo "$PATH"
+echo "$PATH"
+exit
+xit
+
+clear
+
+echo "$PATH"
+ls
+
+ls
+echo "$PATH"
+ls
+sudo make exe
+make exe
+clear
+ls
+clear
+ls;ls|rev
+ls;ls
+clear
+ls;
+ls;ls
+ls;
+cat file
+ls |rev |cat -e > file ; cat file ; rm -rf file && echo OK
+ls |rev |cat-e > file ; cat file ; rm -rf file && echo OK
+clear
+echo '\a'
+echo "\a"
+echo "lol"
+ls |rev
+clear
+ls
+echo "\a"
+echo '\a'
+ls
+clear
+echo "\a \r" | rev
+ls|rec
+ls
+ls|rev
+ls
+cd 
+ls
+env
+ev
+pwd
+exit
+echo '\a'
+echo "\a"
+ee e eepzrrirue_ur_eu_zeur_raeryrh yrynzreryrryyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy
+ls
+ls
+ls
+ks
+ls
+
+env|grep PWD
+
+env
+r
+
+
+ls
+
+clear
+echo "lol""lol"
+clear
+"
+echo "lol '
+ls
+echo "\a"
+echo "\a"
+echo "\a"
+echo "\a"
+echo "\n"
+echo "\n"
+clear
+"
+\a
+lol
+echo "lol\a
+ls
+clear
+echo '\a' '\a' "\a"
+clear
+cat file
+ls>file
+clear
+ls
+exit
+t
+clear
+env
+ls| rev
+clear
+ls
+ls | rev
+env | grep LAST
+env
+clear
+ls
+
+echo $LAST_INPUT
+env | grep LAST
+ls
+clear
+ls ; ; ; ; ; ; ; ; ; ; ; ; ; ; ;ls
+ls ; ; ls
+ls ;; ls
+env
+ls
+clear
+clea
+
+
+
+
+
+
+
+
+
+clear
+ls
+ls|rev
+ls
+clear
+ls|rev|cat -e
+ls|rev
+ls | rev
+clear
+ls
+ls ; ; ; ; ls
+ls ; ls ; ls ; ls
+ls ; ;ls
+ls ; ;ls
+ls ; ; ls
+ls ; ;
+; ; ls
+clear
+ls ; ; ; ; ls
+ls ;;;;;ls
+;; ls
+; ls
+||
+ls
+ls
+ls -l auteur keznn 1>&-  2>&1 |rev
+ls -l auteur keznn 1>&-  2>&1 
+ls -l auteur keznn 2>&1 
+ls
+echo "\a"
+echo "\a"
+env|grep PWD
+clear
+env|grep PWD
+ls
+env
+ls
+clear
 sudo make save
 make save
 cd libft
@@ -4603,6 +5646,7 @@ wfqwef
 
 
 sl
+ls
 ls
 ls
 ls
