--- a/TODO
+++ b/TODO
@@ -1,12 +1,3 @@
-
--> env -u ./21h
-
 -> sigint dans un heredoc
 
--> reset fd before error dans redirect
-
--> \ in dquote 
-
--> before alias
-
--> SIGSTOP 
+-> \ avant alias
